add improvements to styles and background

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </form>
       </div>
 
-      <div id="result-container">
+      <div class="result-container" id="result-container">
         <p id="flour-amount"></p>
         <p id="water-amount"></p>
         <p id="salt-amount"></p>
