add small improvement styles and colors

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
           </div>
 
           <div class="weight-container">
-            <label for="weight-select">Peso del Bollo:</label>
+            <label for="weight-select">Peso del Bollo (g):</label>
             <select id="weight-select"></select>
           </div>
 
           <div class="hydration-container">
-            <label for="hydration-select">Porcentaje de Hidratación:</label>
+            <label for="hydration-select">% de Hidratación:</label>
             <select id="hydration-select"></select>
           </div>
 
@@ -59,9 +59,8 @@
 
     <footer>
       <h3>
-        ¡ Hecha con <i class="fa-solid fa-heart"></i> y toneladas de
-        <i class="fa-solid fa-pizza-slice"></i>
-        !
+        ¡ Hecha con <img src="/public/red-heart.svg" alt="red-heart" /> y
+        toneladas de <img src="/public/pizza.svg" alt="pizza" /> !
       </h3>
     </footer>
 
